# ich-segmentation

./: .env.example  .gitignore  CLAUDE.md  eda.ipynb  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: ruff-after-edit.sh
3d_mae/: models.py
ct_mae/: __init__.py  config.py  dataset.py  train.py  transform.py  utils.py
mae_model/: __init__.py  model.py  train.py
scripts/: download_rsna.slurm  extract_dcm.slurm  test_pipeline.slurm  train_mae.slurm
src/: __init__.py  utils.py
src/eval/: __init__.py  plot_mae.py
src/mae/: __init__.py  config.py  dataset.py  model.py  trainer.py
src/segmentation/: __init__.py  config.py  model.py
tools/: download_rsna.py  extract_dcm.py  extract_nifti.py  smoke_test_segmentation.py
