[project]
name = "ich-segmentation"
version = "0.1.0"
description = "Intracranial hemorrhage segmentation and classification using deep learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.1",
    "lightly>=1.5.23",
    "pydicom>=3.0.2",
    "python-dotenv>=1.2.2",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
dev = ["ruff>=0.15.12"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "NPY", "PD", "PT", "Q", "SIM", "UP"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
